Fixed bug with wide text on small cards

--- a/AgilePoker/Content/AgilePoker.css
+++ b/AgilePoker/Content/AgilePoker.css
@@ -28,6 +28,19 @@
     font-weight:bold;
     background-color:rgb(198,198,198);
 }
+.smallCardWide {
+    border-width:0.25em;
+    border-style:solid;
+    border-color:rgb(0,64,128);
+    border-radius:0.25em;
+    text-align:center;
+    color:rgb(0,64,128);
+    width:3em;
+    height:2.5em;
+    font-weight:bold;
+    background-color:rgb(198,198,198);
+}
+
 .cardTop {
     text-align:left;
     padding:0em 0.5em;
